--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@nuxtjs/bulma": "^1.2.1",
+    "@nuxtjs/google-analytics": "^2.0.2",
     "nuxt": "^2.0.0"
   },
   "devDependencies": {
