--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@nuxtjs/bulma": "^1.2.1",
     "@nuxtjs/google-analytics": "^2.0.2",
+    "@nuxtjs/sitemap": "^0.1.1",
     "nuxt": "^2.0.0"
   },
   "devDependencies": {
